--- a/lab5/templates/login.html
+++ b/lab5/templates/login.html
@@ -8,4 +8,5 @@
         <button type="submit">Войти</button>
     </form>
     <div style="color: red; margin-top: 24px;">{{ errors }}</div>
+    <div style="margin-top: 24px;"><a href="/signup">Нет аккаунта? Зарегистрируйтесь</a></div>
 {% endblock %}
