--- a/lab5/templates/signup.html
+++ b/lab5/templates/signup.html
@@ -9,4 +9,5 @@
         <button type="submit">Зарегистрироваться</button>
     </form>
     <div style="color: red; margin-top: 24px;">{{ errors }}</div>
+    <div style="margin-top: 24px;"><a href="/login">Уже есть аккаунт? Войдите</a></div>
 {% endblock %}
